One column lightbox: fix missing margin right on mobile

--- a/src/sass/onecolumnlightbox.scss
+++ b/src/sass/onecolumnlightbox.scss
@@ -2,6 +2,7 @@
   &[data-engrid-embedded] #engrid {
     max-width: 630px !important;
     margin-left: 15px;
+    margin-right: 15px;
   }
   .body-banner {
     grid-column: 1 / -1;
